--- a/config/wxsmith/configframe.wxs
+++ b/config/wxsmith/configframe.wxs
@@ -2031,6 +2031,11 @@
 					<handler function="OnMenuTypeItemSelected" entry="EVT_MENU" />
 					<radio>1</radio>
 				</object>
+				<object class="wxMenuItem" name="ID_MENUITEMKEYBOARD" variable="MenuItemKeyboard" member="yes">
+					<label>Keyboard</label>
+					<handler function="OnMenuTypeItemSelected" entry="EVT_MENU" />
+					<radio>1</radio>
+				</object>
 			</object>
 			<object class="wxMenu" variable="MenuProfile" member="yes">
 				<label>Profile</label>
